--- a/example/buf.gen.yaml
+++ b/example/buf.gen.yaml
@@ -4,14 +4,14 @@ plugins:
     out: .
     strategy: directory
     opt:
-      - module=github.com/casnerano/protoc-gen-go-rbac
+      - module=github.com/casnerano/protoc-gen-go-guard
   - local: ./bin/protoc-gen-go-grpc
     out: .
     strategy: directory
     opt:
-      - module=github.com/casnerano/protoc-gen-go-rbac
-  - local: ./bin/protoc-gen-go-rbac
+      - module=github.com/casnerano/protoc-gen-go-guard
+  - local: ./bin/protoc-gen-go-guard
     out: .
     strategy: directory
     opt:
-      - module=github.com/casnerano/protoc-gen-go-rbac
+      - module=github.com/casnerano/protoc-gen-go-guard
