--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,26 +5,30 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    name: Run Tests
+  tests:
+    name: Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: ['1.25']
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: '1.25'
 
-    - name: Run Unit Tests
-      run: |
-        go test -v ./...
+    - name: Run unit tests
+      run: go test -v -race ./... -coverprofile=coverage.out
 
-    - name: Run Integration Tests (если есть)
-      run: |
-        go test -v -tags=integration ./...
+    - name: Run integration tests
+      run: go test -v -tags=integration ./...
+
+  lints:
+    name: Lints
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: latest
