--- a/.github/workflows/lint_and_tests.yml
+++ b/.github/workflows/lint_and_tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Lint and Tests
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.25'
+        go-version: 1.25
 
     - name: Run unit tests
       run: go test -v -race ./... -coverprofile=coverage.out
@@ -27,6 +27,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.25
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
